fancybox: smaller z-index to avoid overlapping items

--- a/app/assets/stylesheets/fancybox.sass
+++ b/app/assets/stylesheets/fancybox.sass
@@ -1,5 +1,5 @@
 div.busybox
-  z-index: 9999
+  z-index: 8000
 
 h1
   font-family: Georgia, Times New Roman
